Test/git-issues/git-issue-3451/git-issue-3451a.dfy
// RUN: %exits-with 2 %baredafny resolve --use-basename-for-filename "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

// The #line should no longer be special
#line Q     
#zzzz


